--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,38 @@
 server:
   port: 8080
 
-
 spring:
   application:
     name: api-gateway
   cloud:
     gateway:
-      globalcors:
-        corsConfigurations:
-          '[/**]':
-            allowedOrigins: "http://localhost:3000"
-            allowedHeaders: "*"
-            allowedMethods:
-              - GET
-              - POST
+      routes:
+        - id: user-service-route
+          uri: lb://user-service
+          predicates:
+            - Path=/api/user/**
 
+        - id: auth-service-route
+          uri: lb://auth-service
+          predicates:
+            - Path=/api/auth/**
+
+        - id: chat-service-route
+          uri: lb://chat-service
+          predicates:
+            - Path=/api/chat/**
+
+        - id: search-service-route
+          uri: lb://search-service
+          predicates:
+            - Path=/api/search/**
+
+        - id: notification-service-route
+          uri: lb://notification-service
+          predicates:
+            - Path=/api/notification/**
+
+        - id: ws-handler-service-route
+          uri: lb://ws-handler-service
+          predicates:
+            - Path=/ws/**
